--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -181,45 +181,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201904221744019_InitialModel.cs" />
-    <Compile Include="Migrations\201904221744019_InitialModel.Designer.cs">
-      <DependentUpon>201904221744019_InitialModel.cs</DependentUpon>
+    <Compile Include="Migrations\201904231516433_initial.cs" />
+    <Compile Include="Migrations\201904231516433_initial.Designer.cs">
+      <DependentUpon>201904231516433_initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201904221754306_AddIsSubscribedToCustomer.cs" />
-    <Compile Include="Migrations\201904221754306_AddIsSubscribedToCustomer.Designer.cs">
-      <DependentUpon>201904221754306_AddIsSubscribedToCustomer.cs</DependentUpon>
+    <Compile Include="Migrations\201904231522012_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201904231522012_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201904231522012_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201904221802135_AddMembershipType.cs" />
-    <Compile Include="Migrations\201904221802135_AddMembershipType.Designer.cs">
-      <DependentUpon>201904221802135_AddMembershipType.cs</DependentUpon>
+    <Compile Include="Migrations\201904231522572_SetNameOfMembershipTypes.cs" />
+    <Compile Include="Migrations\201904231522572_SetNameOfMembershipTypes.Designer.cs">
+      <DependentUpon>201904231522572_SetNameOfMembershipTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201904221803373_PopulateMemebershipType.cs" />
-    <Compile Include="Migrations\201904221803373_PopulateMemebershipType.Designer.cs">
-      <DependentUpon>201904221803373_PopulateMemebershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904221832314_ApplyAnnotationsToCustomerName.cs" />
-    <Compile Include="Migrations\201904221832314_ApplyAnnotationsToCustomerName.Designer.cs">
-      <DependentUpon>201904221832314_ApplyAnnotationsToCustomerName.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904221928012_AddNameToMembershipType.cs" />
-    <Compile Include="Migrations\201904221928012_AddNameToMembershipType.Designer.cs">
-      <DependentUpon>201904221928012_AddNameToMembershipType.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904221929462_SetNameOfMembershipTypes.cs" />
-    <Compile Include="Migrations\201904221929462_SetNameOfMembershipTypes.Designer.cs">
-      <DependentUpon>201904221929462_SetNameOfMembershipTypes.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904231314536_AddBirthdateToCustomer.cs" />
-    <Compile Include="Migrations\201904231314536_AddBirthdateToCustomer.Designer.cs">
-      <DependentUpon>201904231314536_AddBirthdateToCustomer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904231330269_addMovie.cs" />
-    <Compile Include="Migrations\201904231330269_addMovie.Designer.cs">
-      <DependentUpon>201904231330269_addMovie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201904231332137_Genres.cs" />
-    <Compile Include="Migrations\201904231332137_Genres.Designer.cs">
-      <DependentUpon>201904231332137_Genres.cs</DependentUpon>
+    <Compile Include="Migrations\201904231524211_Genres.cs" />
+    <Compile Include="Migrations\201904231524211_Genres.Designer.cs">
+      <DependentUpon>201904231524211_Genres.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -231,6 +207,8 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -300,8 +278,24 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\CustomerForm.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201904231516433_initial.resx">
+      <DependentUpon>201904231516433_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904231522012_PopulateMembershipTypes.resx">
+      <DependentUpon>201904231522012_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904231522572_SetNameOfMembershipTypes.resx">
+      <DependentUpon>201904231522572_SetNameOfMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904231524211_Genres.resx">
+      <DependentUpon>201904231524211_Genres.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -314,38 +308,6 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201904221744019_InitialModel.resx">
-      <DependentUpon>201904221744019_InitialModel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221754306_AddIsSubscribedToCustomer.resx">
-      <DependentUpon>201904221754306_AddIsSubscribedToCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221802135_AddMembershipType.resx">
-      <DependentUpon>201904221802135_AddMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221803373_PopulateMemebershipType.resx">
-      <DependentUpon>201904221803373_PopulateMemebershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221832314_ApplyAnnotationsToCustomerName.resx">
-      <DependentUpon>201904221832314_ApplyAnnotationsToCustomerName.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221928012_AddNameToMembershipType.resx">
-      <DependentUpon>201904221928012_AddNameToMembershipType.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904221929462_SetNameOfMembershipTypes.resx">
-      <DependentUpon>201904221929462_SetNameOfMembershipTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904231314536_AddBirthdateToCustomer.resx">
-      <DependentUpon>201904231314536_AddBirthdateToCustomer.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904231330269_addMovie.resx">
-      <DependentUpon>201904231330269_addMovie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201904231332137_Genres.resx">
-      <DependentUpon>201904231332137_Genres.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
